[gd_scene load_steps=13 format=3 uid="uid://ctkibfbvbhpx0"]

[ext_resource type="Script" uid="uid://dtkedxwovrqvq" path="res://weapons/bullet_mortar.gd" id="1_ioko0"]
[ext_resource type="Texture2D" uid="uid://j5og1ibhprap" path="res://art/triangle.png" id="2_ioko0"]

[sub_resource type="Curve" id="Curve_wek4s"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.679825, 0.604396), -1.75385, -1.75385, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_x0pga"]
_limits = [0.0, 80.0, 0.0, 1.0]
_data = [Vector2(0, 80), 0.0, 0.0, 0, 0, Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.205, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="SphereMesh" id="SphereMesh_kh7hd"]

[sub_resource type="SphereShape3D" id="SphereShape3D_ioko0"]

[sub_resource type="SphereShape3D" id="SphereShape3D_005m3"]
radius = 4.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u7itf"]
transparency = 1
cull_mode = 2
shading_mode = 0
albedo_color = Color(1, 0.304688, 0, 1)
albedo_texture = ExtResource("2_ioko0")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_ioko0"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 0.626016), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_u7itf"]
curve_y = SubResource("Curve_ioko0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kh7hd"]
emission_shape_scale = Vector3(4, 0.2, 4)
emission_shape = 6
emission_ring_axis = Vector3(0, 1, 0)
emission_ring_height = 1.0
emission_ring_radius = 1.0
emission_ring_inner_radius = 0.0
emission_ring_cone_angle = 90.0
direction = Vector3(0, 1, 0)
spread = 0.0
directional_velocity_min = -1.60933e-05
directional_velocity_max = 1.99998
directional_velocity_curve = SubResource("CurveXYZTexture_u7itf")
gravity = Vector3(0, 0, 0)

[sub_resource type="QuadMesh" id="QuadMesh_wyunp"]
size = Vector2(0.3, 0.3)

[node name="BulletMortar" type="RigidBody3D"]
collision_layer = 4
collision_mask = 11
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_ioko0")
explosion_curve = SubResource("Curve_wek4s")
flash_curve = SubResource("Curve_x0pga")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-5.73206e-15, 1.31134e-07, 1, -1, -4.37114e-08, 0, 4.37114e-08, -1, 1.31134e-07, 0, 0, 0)
mesh = SubResource("SphereMesh_kh7hd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("SphereShape3D_ioko0")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="ExplosionChecker" type="Node3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ExplosionChecker"]
shape = SubResource("SphereShape3D_005m3")

[node name="ImpactTimer" type="Timer" parent="."]
wait_time = 0.06
one_shot = true

[node name="DetonationFlash" type="OmniLight3D" parent="."]
light_color = Color(1, 0.929412, 0.709804, 1)
omni_range = 2.5

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.29057, 0)
top_level = true
material_override = SubResource("StandardMaterial3D_u7itf")
emitting = false
amount = 128
lifetime = 0.5
one_shot = true
transform_align = 1
process_material = SubResource("ParticleProcessMaterial_kh7hd")
draw_pass_1 = SubResource("QuadMesh_wyunp")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="ImpactTimer" to="." method="_on_impact_timer_timeout"]
[connection signal="finished" from="GPUParticles3D" to="." method="_on_gpu_particles_3d_finished"]
